Remove Jackson BOM, use jersey specific dep instead

--- a/pom.xml
+++ b/pom.xml
@@ -39,20 +39,19 @@
             <artifactId>jersey-hk2</artifactId>
             <version>4.0.0</version>
         </dependency>
+        <!-- JAXB -->
+        <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-json-jackson</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+        <!-- JAXB Optional<T> support -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jdk8</artifactId>
+            <version>2.20.1</version>
+        </dependency>
     </dependencies>
-
-    <dependencyManagement>
-        <dependencies>
-            <!-- XML/JSON (Un-)Marshalling -->
-            <dependency>
-                <groupId>com.fasterxml.jackson</groupId>
-                <artifactId>jackson-bom</artifactId>
-                <version>2.20.0</version>
-                <scope>import</scope>
-                <type>pom</type>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
 
     <build>
         <plugins>
